# AsciiArtProject

./: .gitignore  LICENSE  README.md
src/: CMakeLists.txt
src/GUI/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.h  other_window.ui  sth.cpp  sth.h  sth.ui
src/ascii_art/: CMakeLists.txt  artist_base.cpp  artist_base.h  artist_factory.cpp  artist_factory.h  ascii_art_generator.cpp  ascii_art_generator.h  ascii_artist.cpp  ascii_artist.h  basis_image.cpp  basis_image.h  common_types.h  feature.cpp  feature.h  feature_extractor.cpp  feature_extractor.h  feature_extractor_base.cpp  feature_extractor_base.h  feature_extractor_factory.cpp  feature_extractor_factory.h  image_tiler_base.cpp  image_tiler_base.h  patch.cpp  patch.h  rectangular_grid_tiler.cpp  rectangular_grid_tiler.h  tiler_factory.cpp  tiler_factory.h
